@@ -30,6 +30,7 @@ $ -> Language fix or change
 29-Jun-2010 Ian MacLennan
  # [#20959] Single Newsfeed Display Options parameters
  # [#21125] Article manager - view created by - details
+ # [#21187] Template styles filter does not display admin templates
 
 29-Jun-2010 Jean-Marie Simonet
  # [#20836] Capitalization of "toolbar-popup-Popup". Thanks Matt. + some
